--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/1.css" />
-    <link rel="stylesheet" href="/css/phone.css" />
+    <link rel="stylesheet" href="./css/phone.css" />
     <link rel="stylesheet" href="./css/table.css">
-    <script defer src="/js/swiper-bundle.min.js"></script>
-    <script defer src="/js/script.js"></script>
+    <script defer src="./js/swiper-bundle.min.js"></script>
+    <script defer src="./js/script.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -122,7 +122,7 @@
             <div class="row">
               <div class="text3">
                 <div class="icon">
-                  <img src="/img/icon1.svg" alt="icon img" />
+                  <img src="img/icon1.svg" alt="icon img" />
                 </div>
                 Ваше премиальное обслуживание по доступным ценам
               </div>
