--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/2.css" />
     <link rel="stylesheet" href="./css/phone.css" />
-    <script defer src="/js/script.js"></script>
-    <link rel="stylesheet" href="/registration.html" />
+    <script defer src="./js/script.js"></script>
+    <link rel="stylesheet" href="./registration.html" />
     <title>Document</title>
   </head>
   <body>
