--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="login">
         <a href="./registration.html" class="login-btn">Войти</a>
       </div>
-      <img src="/img/menu.svg" alt="" class="menu" />
+      <img src="./img/menu.svg" alt="" class="menu" />
     </header>
     <main>
       <div class="home-page">
